Fixed background painting of fieldset element with a legend

The BackgroundIsKnownToBeOpaqueInRect return value contract is to return true
when there is full opaque coverage. Field set, with a legend, does not have
full coverage. Need to return false in that case.

This was leading to losing parent painting, most obvious with uninitialized
surfaces of layered parents.

Bug: 892582
Change-Id: I8c162910d16d6d44301110146739ad1cbf9c88cd
Reviewed-on: https://chromium-review.googlesource.com/c/1379169
Commit-Queue: Morten Stenshorne <mstensho@chromium.org>
Reviewed-by: Steve Kobes <skobes@chromium.org>
Reviewed-by: Morten Stenshorne <mstensho@chromium.org>
Cr-Commit-Position: refs/heads/master@{#617662}
Former-commit-id: 5612ec6b2568a2b4da5444875a9fc443f1867dfd